# rust-bindings-example

./: .clangd  .gitignore  Dockerfile  Makefile  Makefile.toml  README.md  compose.yaml  flake.nix
cpp/: Makefile  core.h  main.cpp
go/: core.h  main.go
lib/: Cargo.toml  build.rs  cbindgen.toml  rust-toolchain.toml
lib/src/: core.rs  cpp.rs  enumurate.rs  ffi_vec.rs  js.rs  lib.rs  python.rs
node/: main.mjs
python/: main.py
