[package]
name = "rust-ffi-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
crate-type = ["cdylib"]

[features]
python = ["pyo3"]
wasm = ["wasm-bindgen"]

[dependencies]
pyo3 = { version = "0.22.5", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }
