[package]
name = "rust-bindings-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
crate-type = ["cdylib", "staticlib"]

[features]
python = ["pyo3"]
wasm = ["wasm-bindgen"]
cpp = []
go = []

[dependencies]
pyo3 = { version = "0.22.5", features = ["extension-module"], optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }

[build-dependencies]
cbindgen = "0.27.0"
